Implemented repository management pages

--- a/brainminer/ui/partials/dashboard.html
+++ b/brainminer/ui/partials/dashboard.html
@@ -3,12 +3,12 @@
     <div class="row">
         <h5 class="col s12 left-align grey-text text-darken-2">Storage</h5>
         <div class="col s12 m4 l4">
-            <a href="#/repositories">
+            <a href="#/files">
                 <div class="card white z-depth-2">
                     <div class="card-content">
-                        <img src="../images/repository-32x32.png"/>
-                        <h5 class="grey-text text-darken-2">Repositories</h5>
-                        <p class="grey-text">Repositories</p>
+                        <img src="../images/files-32x32.png"/>
+                        <h5 class="grey-text text-darken-2">Files</h5>
+                        <p class="grey-text">Manage files</p>
                     </div>
                 </div>
             </a>
@@ -19,7 +19,7 @@
                     <div class="card-content">
                         <img src="../images/file-sets-32x32.png"/>
                         <h5 class="grey-text text-darken-2">File sets</h5>
-                        <p class="grey-text">File sets</p>
+                        <p class="grey-text">Manage file sets</p>
                     </div>
                 </div>
             </a>
@@ -31,9 +31,9 @@
             <a href="#/tasks">
                 <div class="card white z-depth-2">
                     <div class="card-content">
-                        <img src="../images/gears-32x32.png"/>
+                        <img src="../images/tasks-32x32.png"/>
                         <h5 class="grey-text text-darken-2">Tasks</h5>
-                        <p class="grey-text">Create and monitor compute tasks</p>
+                        <p class="grey-text">Manage tasks</p>
                     </div>
                 </div>
             </a>
@@ -42,9 +42,9 @@
             <a href="#/results">
                 <div class="card white z-depth-2">
                     <div class="card-content">
-                        <img src="../images/results-32x32.png"/>
+                        <img src="../images/task-results-32x32.png"/>
                         <h5 class="grey-text text-darken-2">Results</h5>
-                        <p class="grey-text">View task results</p>
+                        <p class="grey-text">Manage task results</p>
                     </div>
                 </div>
             </a>
