--- a/brainminer/ui/partials/admin.html
+++ b/brainminer/ui/partials/admin.html
@@ -1,6 +1,42 @@
 <div class="row">
     <div ng-include src="'partials/nav.html'"></div>
     <div class="row">
+        <h5 class="col s12 left-align grey-text text-darken-2">Security</h5>
+        <div class="col s12 m4 l4">
+            <a href="#/users">
+                <div class="card white z-depth-2">
+                    <div class="card-content">
+                        <img src="../images/users-32x32.png"/>
+                        <h5 class="grey-text text-darken-2">Users</h5>
+                        <p class="grey-text">Manage users</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col s12 m4 l4">
+            <a href="#/user-groups">
+                <div class="card white z-depth-2">
+                    <div class="card-content">
+                        <img src="../images/user-groups-32x32.png"/>
+                        <h5 class="grey-text text-darken-2">User groups</h5>
+                        <p class="grey-text">Manage groups of users</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col s12 m4 l4">
+            <a href="#/permissions">
+                <div class="card white z-depth-2">
+                    <div class="card-content">
+                        <img src="../images/permissions-32x32.png"/>
+                        <h5 class="grey-text text-darken-2">Permissions</h5>
+                        <p class="grey-text">Manage user and group permissions</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
         <h5 class="col s12 left-align grey-text text-darken-2">Storage</h5>
         <div class="col s12 m4 l4">
             <a href="#/repositories">
