--- a/brainminer/ui/partials/repository/repository.html
+++ b/brainminer/ui/partials/repository/repository.html
@@ -12,12 +12,34 @@
         </div>
         <div class="row">
             <div class="col s4 offset-s4">
-                <p class="right-align">
+                <p class="center-align">
                     <input class="btn waves-effect waves-light" type="button" ng-click="cancelSave()" value="Cancel">
                     <input class="btn waves-effect waves-light" type="submit" ng-click="deleteRepository(repository)" value="Delete" ng-if="repository.id > 0">
                     <input class="btn waves-effect waves-light" type="submit" ng-click="saveRepository(repository)" value="Save">
                 </p>
             </div>
         </div>
+        <span ng-if="repository.id > 0">
+            <h5 class="col s12 center-align grey-text text-darken-2">Files</h5>
+            <div class="col s12 m6 l6 offset-m3 offset-l3 center-align">
+                <input class="btn waves-effect waves-light" type="button" ng-click="uploadFile(repository)" value="Upload"/>
+                <div class="collection">
+                    <a href="#/repositories/{{repository.id}}/files/{{file.id}}" class="collection-item" ng-repeat="file in repository.files | orderBy:'name'">
+                        {{ file.name }}
+                    </a>
+                </div>
+            </div>
+        </span>
+        <span ng-if="repository.id > 0">
+            <h5 class="col s12 center-align grey-text text-darken-2">File sets</h5>
+            <div class="col s12 m6 l6 offset-m3 offset-l3 center-align">
+                <input class="btn waves-effect waves-light" type="button" ng-click="createFileSet(repository)" value="Create"/>
+                <div class="collection">
+                    <a href="#/repositories/{{repository.id}}/file-sets/{{file_set.id}}" class="collection-item" ng-repeat="file_set in repository.file_sets | orderBy:'name'">
+                        {{ file_set.name }}
+                    </a>
+                </div>
+            </div>
+        </span>
     </div>
 </div>
