--- a/brainminer/ui/partials/user/user.html
+++ b/brainminer/ui/partials/user/user.html
@@ -64,7 +64,7 @@
         </div>
         <div class="row">
             <div class="col s4 offset-s4">
-                <p class="right-align">
+                <p class="center-align">
                     <input class="btn waves-effect waves-light" type="button" ng-click="cancelSave()" value="Cancel">
                     <input class="btn waves-effect waves-light" type="submit" ng-click="deleteUser(user)" ng-if="user.id > 0" value="Delete">
                     <input class="btn waves-effect waves-light" type="submit" ng-click="saveUser(user)" value="Save">
